@@ -17,6 +17,7 @@ name=Ubuntu
 packages=ubuntu-desktop
 metalink=http://releases.ubuntu.com/8.10/ubuntu-8.10-desktop-i386.metalink
 metalink2=http://cdimage.ubuntu.com/daily-live/current/intrepid-desktop-i386.metalink
+ordering=1
 
 [Ubuntu-amd64]
 arch=amd64
@@ -24,6 +25,7 @@ name=Ubuntu
 packages=ubuntu-desktop
 metalink=http://releases.ubuntu.com/8.10/ubuntu-8.10-desktop-amd64.metalink
 metalink2=http://cdimage.ubuntu.com/daily-live/current/intrepid-desktop-amd64.metalink
+ordering=1
 
 [Kubuntu-i386]
 arch=i386
@@ -31,6 +33,7 @@ name=Kubuntu
 packages=kubuntu-kde4-desktop
 metalink=http://cdimage.ubuntu.com/kubuntu-kde4/releases/8.10/release/kubuntu-kde4-8.10-desktop-i386.metalink
 metalink2=http://cdimage.ubuntu.com/kubuntu-kde4/daily-live/current/intrepid-desktop-i386.metalink
+ordering=2
 
 [Kubuntu-amd64]
 arch=amd64
@@ -38,6 +41,7 @@ name=Kubuntu
 packages=kubuntu-kde4-desktop
 metalink=http://cdimage.ubuntu.com/kubuntu-kde4/releases/8.10/release/kubuntu-kde4-8.10-desktop-amd64.metalink
 metalink2=http://cdimage.ubuntu.com/kubuntu-kde4/daily-live/current/intrepid-desktop-amd64.metalink
+ordering=2
 
 [Xubuntu-i386]
 arch=i386
@@ -45,6 +49,7 @@ name=Xubuntu
 packages=xubuntu-desktop
 metalink=http://cdimage.ubuntu.com/xubuntu/releases/8.10/release/xubuntu-8.10-desktop-i386.metalink
 metalink2=http://cdimage.ubuntu.com/xubuntu/daily-live/current/intrepid-desktop-i386.metalink
+ordering=3
 
 [Xubuntu-amd64]
 arch=amd64
@@ -52,3 +57,4 @@ name=Xubuntu
 packages=xubuntu-desktop
 metalink=http://cdimage.ubuntu.com/xubuntu/releases/8.10/release/xubuntu-8.10-desktop-amd64.metalink
 metalink2=http://cdimage.ubuntu.com/xubuntu/daily-live/current/intrepid-desktop-amd64.metalink
+ordering=3
