@@ -10,7 +10,7 @@ class Distro(object):
             info_file, arch, metalink, metalink2,
             packages, size, md5sums, files_to_check,
             metalink_md5sums, metalink_md5sums_signature,
-            backend, minsize=0, maxsize=0):
+            backend, ordering, minsize=0, maxsize=0):
         self.name = name
         self.version = version
         self.arch = arch
@@ -27,6 +27,7 @@ class Distro(object):
         self.metalink2 = metalink2
         self.packages = packages
         self.backend = backend
+        self.ordering = ordering
         if isinstance(files_to_check, basestring):
             files_to_check = [
                 os.path.normpath(f.strip().lower())
